<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_check"
            android:title="@string/check" />
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_map"
            android:title="@string/my_places" />
        <item
            android:id="@+id/nav_check_log"
            android:icon="@drawable/ic_verified"
            android:title="@string/check_log" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
