<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/login_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:id="@+id/login_form">

        <ScrollView android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:layout_marginTop="60dp"
                >



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/redefinir_senha_codigo_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/redefinir_senha_codigo_label"
                        android:padding="10dp"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="60dp" />


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/novaSenha"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:hint="@string/redefinir_senha_nova_senha"
                        android:padding="10dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="20dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/repetirNovaSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/redefinir_senha_repita_senha"
                        android:padding="10dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/redefinirSalvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/redefinir_senha_salvar"
                    android:background="@drawable/btn_primary"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:textSize="17sp"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</LinearLayout>