<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/login_form">

        <ScrollView android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/accountName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_label"
                        android:padding="10dp"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/accountPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_label"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/signIn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:text="Entrar"
                    android:background="@drawable/btn_login"
                    android:padding="10dp"
                    android:textColor="@color/darkish_pink" />

                <TextView android:id="@+id/signInHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in_help"
                    android:padding="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp">
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/darkish_pink"
                        android:layout_weight="1.0"
                        android:layout_gravity="center_vertical" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or"
                        android:layout_weight="1.0" />
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/darkish_pink"
                        android:layout_weight="1.0"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <RelativeLayout android:id="@+id/facebook"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_facebook"
                    android:clickable="true">
                    <android.support.v7.widget.AppCompatImageView android:id="@+id/facebook_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/ic_facebook" />
                    <View
                        android:id="@+id/facebook_icon_separator"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/dark_slate_blue"
                        android:layout_toRightOf="@+id/facebook_icon"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/facebook_icon_separator"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/white"
                        android:text="@string/sign_in_facebook" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="bottom">
            <TextView android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_up"
                android:background="@color/transparent_gray_30"
                android:textColor="@color/neon_red" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>